# arduino808x

./: .gitignore  Cargo.toml  README.md
asm/: i8080.inc  kefrensloop.asm  program.asm  program.lst  program_8080.asm  program_8080_regs.asm  program_regs.asm  program_setmo.asm  program_setmo_regs.asm  testcyc.asm
crates/ard808x_client/: Cargo.toml
crates/ard808x_client/src/: lib.rs
crates/ard808x_cpu/: Cargo.toml
crates/ard808x_cpu/examples/: cpu_id.rs
crates/ard808x_cpu/src/: code_stream.rs  lib.rs  opcodes.rs  queue.rs  remote_program.rs
crates/ard808x_cpu/tests/: aaa.rs  aas.rs  daa.rs  das.rs  flags.rs
crates/exec_program/: Cargo.toml
crates/exec_program/src/: main.rs
pcb/asm/: load.asm  store.asm  store.lst  store_nmi.asm  store_nmi.lst
pcb/kicad/: ard8088.kicad_pcb  ard8088.kicad_prl  ard8088.kicad_pro  ard8088.kicad_sch  ~ard8088.kicad_pcb.lck
scripts/: build.bat  build2.bat  build_8080.bat
sketches/cpu_server/: ansi_color.h  arduino8088.h  arduinoX86.h  bus.ino  buzzer.ino  cpu.ino  cpu_server.h  cpu_server.ino  gpio_pins.h  i8288.ino  lib.ino  opcodes.h  piq.ino
