[package]
name = "ard808x_client"
description = "A library crate that implements a client for the Arduino808x serial protocol."
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "ard808x_client"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
log.workspace = true
serialport.workspace = true
